client/src/css/searchJob.css
.all {
  background: linear-gradient(120deg, #2980b9, #8e44ad);
  width: 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  overflow-x: hidden;
  overflow-y: auto;
}

.searchForm {
  padding: 1.5%;
  height: 400px;
  margin-top: 1%;
  margin-left: 19%;
}

/* This is for the serach area, two seach bars and one seach button*/
.search_header {
  height: 170px;
  display: flex;
  font-family: sans-serif;
  position: relative;
}

.welcome-text a:hover {
  background: #fff;
  color: #726363;
}

.search-field {
  position: relative;
  display: inline-block;
  border-bottom: 2px solid #a42cf3;
  padding: 5px 20px;
  height: 60px;
  border-radius: 15px;
  outline: none;
}

.search-field::placeholder {
  font-weight: bold;
  font-size: 20px; /* Adjust the font size as needed */
}

.search-field {
  font-weight: bold;
  font-size: 20px; /* Adjust the font size as needed */
}
/* Fix the input text for search filed*/
/**/


.type {
  width: 350px;
  margin-right: 40px;
}

.location {
  width: 250px;
  margin-right: 25px;
}

.search-btn {
  height: 50px;
  width: 150px;
  background: #b73bff;
  border: none;
  color: #fff;
  border-radius: 15px;
  margin-right: 20px; /* Add margin between location bar and search button */
}

.search-btn:hover {
  background: #560372;
  cursor: pointer;
  border: 2px solid #c9bbbb;
  transition: .5s;
}

.form-box {
  background: rgba(79, 66, 79, 0.5);
  padding: 15px;
}

.form-box h1 {
  text-align: center;
  color: #fff;
  text-transform: uppercase;
  font-size: 40px;
  margin-bottom: 1%;
}
/* Search area */

/*This is for horizonal display box for seaching job( card, and job info)*/
.big_container {
  display: flex;
  height: 100vh;
  width: 86%; 
  flex-direction: row;
  overflow: hidden;
  will-change: auto;
  margin-top: -12%;
  margin-left: 7%;
}

.Cards_Container {
  flex: 30%; /* Set the flex value to 30% */
  overflow-y: auto;
  scrollbar-width: thin;
  scrollbar-color: #888 transparent;
}

.Info_Container {
  flex: 70%; /* Set the flex value to 70% */
  overflow-y: auto;
  scrollbar-width: thin;
  scrollbar-color: #888 transparent;
}

/* This is for the save Jobs page contianer*/
.saveBig_Container {
  display: flex;
  height: 100vh;
  width: 86%; 
  flex-direction: row;
  overflow: hidden;
  will-change: auto;
  margin-top: 2%;
  margin-left: 7%;
}

.saveCards_Container {
  flex: 30%; /* Set the flex value to 30% */
  overflow-y: auto;
  scrollbar-width: thin;
  scrollbar-color: #888 transparent;
}

.saveInfo_Container {
  flex: 70%; /* Set the flex value to 70% */
  overflow-y: auto;
  scrollbar-width: thin;
  scrollbar-color: #888 transparent;
}

.saveCards_Container::-webkit-scrollbar,
.saveInfo_Container::-webkit-scrollbar {
  width: 0.5em;
}

.saveCards_Container::-webkit-scrollbar-thumb,
.saveInfo_Container::-webkit-scrollbar-thumb {
  background: #888;
}


/* for view of the scrollbars*/
.Cards_Container::-webkit-scrollbar,
.Info_Container::-webkit-scrollbar {
  width: 0.5em;
}

.Cards_Container::-webkit-scrollbar-thumb,
.Info_Container::-webkit-scrollbar-thumb {
  background: #888;
}

/* for each job card*/
.card {
  margin: 10px;
  padding: 20px;
  background-color: #F6F6F6;
  border-radius: 10px;
  border: 3px solid #BADA55;
}

.card.selected {
  background-color: rgb(189, 117, 248); 
}

.jobInfoBody {
  margin: 10px;
  padding: 20px;
  background-color: #F6F6F6;
  border-radius: 10px;
  border: 3px solid #BADA55;
}

.jobInfoTitle {
  font-size: 24px;
  color: #333;
}

.jobInfoDetails {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.jobInfoColumn {
  flex: 1;
}

.jobInfoSubtitle {
  font-size: 16px;
  color: #777;
  margin-top: 10px;
}

.jobInfoText {
  font-size: 16px;
  color: #333;
}

.jobInfoActions {
  display: flex;
  justify-content: flex-start;
  margin-top: 20px;
}

.jobInfoDescription {
  margin-top: 20px;
}

.jobInfoDescription .jobInfoSubtitle {
  margin-bottom: 10px;
}

.jobInfoDescription .jobInfoText {
  font-size: 16px;
  color: #333;
  white-space: pre-wrap;
}



/* This is for save and unsave buttons*/
.savedJobsTitle {
  padding: 50px;
  height: 150px;
}

.noSavedJobs {
  position: absolute;
  top: 50%;
  left: 30%;
  text-align: center;
}

.btn {
  text-align: center;
  margin-top: 5px;
  margin-right: 15px;
  width: 17%;
  height: 40px;
  border: 1px solid;
  background: #2691d9;
  border-radius: 25px;
  font-size: 18px;
  color: #e9f4fb;
  font-weight: 700;
  cursor: pointer;
  outline: none;
}

.btn:hover {
  border-color: #2691d9;
  transition: .5s;
}

.loader {
  position: absolute;
  display: "flex";
  top: 50%;
  left: 50%;
}
/* save and unsave buttoms*/

